--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=booking
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/booking_tickets
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.jpa.open-in-view=false
